[tool.poetry]
name = "travel_dog"
version = "0.1.0"
description = "A sample web app to model a dating site for pets."
authors = ["Andrew Krug <andrewkrug@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pytest = "^7.1.3"
black = "^22.10.0"
flask-dynamo = "^0.1.2"
boto3 = "^1.24.91"
flask-awscognito = "^1.3"
flask-jwt-extended = "^4.4.4"
pyscreenshot = "^3.0"
faker = "^15.1.1"
launchdarkly-server-sdk = "^7.5.1"
ddtrace = "^1.5.3"
pillow = "^9.3.0"
flask-markdown = "^0.3"
requests = "^2.28.1"
json-log-formatter = "^0.5.1"
python-json-logger = "^2.0.4"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
